Ozhaev Zaynudin Game.cpp.g++log.txt
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp: In function 'void ControlBall(Ball*, int*, Key, int, int, int)':
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:130:6: warning: no previous declaration for 'void ControlBall(Ball*, int*, Key, int, int, int)' [-Wmissing-declarations]
 void ControlBall(Ball* ball, int* F4_Col, Key plaer, int dt, int score1, int score2)
      ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:170:45: error: invalid conversion from 'int' to 'int*' [-fpermissive]
         PhysicsBall(ball, dt, score1, score2);
                                             ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:9:6: error:   initializing argument 3 of 'void PhysicsBall(Ball*, int, int*, int*)' [-fpermissive]
 void PhysicsBall(Ball* ball, int dt, int* score1, int* score2);
      ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:170:45: error: invalid conversion from 'int' to 'int*' [-fpermissive]
         PhysicsBall(ball, dt, score1, score2);
                                             ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:9:6: error:   initializing argument 4 of 'void PhysicsBall(Ball*, int, int*, int*)' [-fpermissive]
 void PhysicsBall(Ball* ball, int dt, int* score1, int* score2);
      ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp: In function 'void CollisionBall(Ball*, Ball*)':
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:243:46: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
     double d = sqrt(Dx*Dx + Dy*Dy); if (d == 0) d = 0.01; //гипотенуза
                                              ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:256:28: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
         if ((Vn1 - Vn2) == 0) Vn1 = Vn1 + 0.01;
                            ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:270:43: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
         d = sqrt(Dx*Dx + Dy*Dy); if (d == 0) d = 0.01;
                                           ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:277:16: warning: unused variable 'Vt2' [-Wunused-variable]
         double Vt2 = -(*ball_1) .vx*cos + (*ball_1) .vy*sin; //поворот системы координат шар2
                ^
---------------------------------------------------------------------------------------------
[16.06.2021 19:28:11,97 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\Game> g++.exe "C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp" -o "C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
